--- a/ExpenseTacker/app/src/main/res/layout/activity_add_expenses.xml
+++ b/ExpenseTacker/app/src/main/res/layout/activity_add_expenses.xml
@@ -118,6 +118,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_field_tag" />
 
+    <Button
+        android:id="@+id/btn_update"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:visibility="gone"
+        android:text="@string/btn_update"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/text_field_tag" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
