--- a/ExpenseTacker/app/src/main/res/layout/fragment_home.xml
+++ b/ExpenseTacker/app/src/main/res/layout/fragment_home.xml
@@ -171,5 +171,5 @@
         android:importantForAccessibility="no"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@android:drawable/ic_dialog_email" />
+        app:srcCompat="@drawable/icon_add" />
 </androidx.constraintlayout.widget.ConstraintLayout>
