--- a/ExpenseTacker/app/src/main/res/layout/activity_add_expenses.xml
+++ b/ExpenseTacker/app/src/main/res/layout/activity_add_expenses.xml
@@ -112,9 +112,11 @@
         android:id="@+id/btn_save"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:text="@string/save"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/btn_save_next"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_field_tag" />
 
@@ -123,12 +125,21 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:visibility="gone"
         android:text="@string/btn_update"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/text_field_tag" />
 
+    <Button
+        android:id="@+id/btn_save_next"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Save and Next"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toEndOf="@+id/btn_save"
+        app:layout_constraintTop_toTopOf="@+id/btn_save" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
