--- a/ExpenseTacker/app/src/main/res/menu/activity_main_drawer.xml
+++ b/ExpenseTacker/app/src/main/res/menu/activity_main_drawer.xml
@@ -11,10 +11,12 @@
         <item
             android:id="@+id/nav_gallery"
             android:icon="@drawable/ic_menu_gallery"
+            android:visible="false"
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/nav_slideshow"
             android:icon="@drawable/ic_menu_slideshow"
+            android:visible="false"
             android:title="@string/menu_slideshow" />
         <item
             android:id="@+id/nav_my_expenses"
