--- a/ExpenseTacker/app/src/main/res/layout/fragment_monthly.xml
+++ b/ExpenseTacker/app/src/main/res/layout/fragment_monthly.xml
@@ -5,12 +5,21 @@
     android:layout_height="match_parent"
     tools:context=".ui.fragments.MonthlyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Monthly fragment"
-        android:gravity="center"
-        android:textSize="18sp"/>
+        android:scrollbars="vertical"
+        tools:ignore="UselessParent">
 
+        <TextView
+            android:id="@+id/type_summery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:padding="8dp"
+            android:text=""
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+    </ScrollView>
 </FrameLayout>
