--- a/ExpenseTacker/app/src/main/res/layout/fragment_yearly.xml
+++ b/ExpenseTacker/app/src/main/res/layout/fragment_yearly.xml
@@ -1,16 +1,58 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.fragments.YearlyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="Yearly fragment"
-        android:gravity="center"
-        android:textSize="18sp"/>
+        android:scrollbars="vertical"
+        tools:ignore="UselessParent">
 
-</FrameLayout>
+        <!--        <LinearLayout-->
+        <!--            android:layout_width="match_parent"-->
+        <!--            android:layout_height="wrap_content"-->
+        <!--            android:padding="8dp"-->
+        <!--            android:weightSum="2">-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/tv_type"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginStart="8dp"-->
+        <!--                android:layout_marginEnd="8dp"-->
+        <!--                android:layout_weight="1"-->
+        <!--                android:padding="4dp"-->
+        <!--                android:text=""-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:textSize="18sp" />-->
+
+        <!--            <TextView-->
+        <!--                android:id="@+id/tv_amount"-->
+        <!--                android:layout_width="match_parent"-->
+        <!--                android:layout_height="wrap_content"-->
+        <!--                android:layout_marginStart="8dp"-->
+        <!--                android:layout_marginEnd="8dp"-->
+        <!--                android:layout_weight="1"-->
+        <!--                android:padding="4dp"-->
+        <!--                android:text=""-->
+        <!--                android:textColor="@color/black"-->
+        <!--                android:textSize="18sp" />-->
+        <!--        </LinearLayout>-->
+
+        <TextView
+            android:id="@+id/type_summery"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            android:padding="8dp"
+            android:text=""
+            android:textColor="@color/black"
+            android:textSize="18sp" />
+    </ScrollView>
+
+
+</LinearLayout>
