--- a/ExpenseTacker/app/src/main/res/layout/show_expense_layout.xml
+++ b/ExpenseTacker/app/src/main/res/layout/show_expense_layout.xml
@@ -114,6 +114,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginTop="4dp"
+                android:visibility="gone"
                 android:weightSum="2">
 
                 <TextView
